--- a/carmajava/launch/carma.env
+++ b/carmajava/launch/carma.env
@@ -24,3 +24,6 @@ export CARMA_LOCZ_NS="/localization"
 
 # Namespace of nodes in the web ui stack
 export CARMA_UI_NS="/ui"
+
+# Namespace of nodes in the PATH CARMA/CARLA comm stack
+export CARMA_PATH_NS="/carla_comm"
