--- a/carla_carma/package.xml
+++ b/carla_carma/package.xml
@@ -50,6 +50,7 @@
 <build_depend>std_msgs</build_depend>
 <build_depend>cav_msgs</build_depend>
 <build_depend>cav_srvs</build_depend>
+<build_depend>carla_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_export_depend>geometry_msgs</build_export_depend>
 <build_export_depend>rospy</build_export_depend>
@@ -63,7 +64,7 @@
 <exec_depend>cav_msgs</exec_depend>
 <exec_depend>rospy</exec_depend>
 <exec_depend>std_msgs</exec_depend>
-
+<exec_depend>carla_msgs</exec_depend>
 <!-- The export tag contains other, unspecified, tags -->
 <export>
 <!-- Other tools can request additional information be placed here -->
